[package]
name = "algol"
version = "0.1.0"
authors = ["Arnau del Río"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/arnaudelrio/algol"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
poise = "0.6.1"
